#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-14
2014-06-14 David Schneider
- regenerate with psddl V00-13-12: move default_psana.cfg into data subdir
- regenerate with psddldata V01-00-10: trac ticket #309
	
Tag: V00-01-13
2014-06-12 David
- move automatic translation config file into data subdir.

Tag: V00-01-12
2014-06-12 David
- add psana config file to be used during automatic translation

Tag: V00-01-11
2014-06-10 David
- refactor between this package and package psddl_hdf2psana
  move NDArrayParameters into psddl_hdf2psana
- extend two unit tests to read back fixed and vlen arrays into psana
  tests psddl_hdf2psana V00-09-09

Tag: V00-01-10
2014-05-30 David
- a unit test was not cleaning up after itself.

Tag: V00-01-09
2014-05-30 David
- fix bug that caused epics aliases with a / in them to be discarded.

Tag: V00-01-08
2014-05-19 David
- correct how multi value epics pv's are translated.
- track ticket #301.

Tag: V00-01-07
2014-05-18 David
- fix bug when translating calibrated cspad in the presence of damaged 
  cspad that caused the same h5 group for the cspad src to be created 
  twice, causing a crash. fix bug, trac ticket #302.

Tag: V00-01-06
2014-05-16 David
- add unit test for epics
- step for trac ticket #301

Tag: V00-01-05
2014-05-15 David
- use file and memory h5 typeids
- first step for trac ticket #301

Tag: V00-01-04
2014-05-08 David
- update for psddldata V01-00-09, bld GMD v2
- trac ticket #300

Tag: V00-01-03
2014-05-02 David
- update for psddldata V01-00-08, epix 10k
- trac ticket #295

Tag: V00-01-02
2014-04-21 David
- Write both fixed sized ndarrays and vlen ndarrays.